src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__vt100_progressive_activity_rail.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---











Akra  |  thread: Progressive activity
◦ Working (0s • waiting for response / interrupt runtime-...)
notice: activity: active:command | diff:+1 -1 h1 | cmd:2 lines | ctx:75.00% | model:gpt-5.5 | task:P0-D3 rail
>
prompt: Enter queue | Tab steer | Ctrl+j nl
