src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__vt100_queue_overlay.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---
Akra / Planning Queue / inline inspection
Review the next actionable work without opening raw planning artifacts.
Summary
next: Implement shell planning status  |  queue: Queue Summary
Queue
Ready Queue
> #1 [ready / p10] Implement shell planning status
  #2 [ready / p8] Trim legacy shell code
Proposals
No promotable proposals are queued right now.
Notes
skipped tasks: 1 / blocked by tasks: task-2(in_progress)











Keys
Up/Down or j/k: select  |  x/Delete: remove  |  Esc: close
Akra  |  Workflows: ready  |  Sessions: idle  |  Reviews: off
>
prompt: new thread ready  |  Enter send  |  Ctrl+j nl  |  :help
