src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__vt100_streaming_shell.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---








Codex:
  streaming delta should stay in the transcript until completion

Akra / root  •  ready  •  gpt-5.5/high  •  queue: off
◦ Working (0s • turn running / interrupt runtime-native)
╭ Task
│ > Describe a task or type : for commands
╰  Type a follow-up  |  Tab steers after typing
