src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__vt100_viewport_replay_streaming.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---







Codex:
  viewport replay stream remains separate

Akra / root  •  branch: --  •  ready  •  gpt-5.5/high  •  ctx: --  •  queue: off
◦ Working (0s • turn running / interrupt runtime-native)
recent codex: viewport replay transcript remains an...
╭ Task
│ > Describe a task or type : for commands
╰  Type a follow-up  |  Tab steers after typing
